Initial work on unsupervised learning

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.2.0",
     "albumentations>=1.4.22",
+    "altair>=5.5.0",
     "catboost>=1.2.5",
     "cleanlab>=2.6.5",
     "cleanvision>=0.3.6",
@@ -17,6 +18,7 @@ dependencies = [
     "kornia[x]>=0.7.4",
     "lets-plot>=4.5.1",
     "lightgbm>=4.5.0",
+    "lightning>=2.5.0.post0",
     "numpy>=2.2.0",
     "pandas>=2.2.3",
     "plotnine>=0.14.3",
@@ -24,6 +26,8 @@ dependencies = [
     "pyarrow>=18.1.0",
     "quarto>=0.1.0",
     "scikit-learn>=1.6.0",
+    "seaborn>=0.13.2",
+    "skimpy>=0.0.16",
     "timm>=1.0.12",
     "torch>=2.5.1",
     "torchinfo>=1.8.0",
